# vbukv

./: .gitignore  Cargo.toml  README.md  test_slovar.txt
.github/workflows/: development.yml  draft_release.yml  release.yml  rust.yml  tagged_release.yml
src/: args.rs  dict.rs  file.rs  lib.rs  main.rs  rule.rs  term.rs  tests.rs
src/args/: tests.rs
src/dict/: tests.rs
src/file/: tests.rs
src/input/: args.rs  mod.rs
src/input/args/: tests.rs
src/libvbukv/: dict.rs  dict2.rs  file.rs  mod.rs  rule.rs  tests.rs
src/libvbukv/dict/: tests.rs
src/libvbukv/file/: tests.rs
src/libvbukv/rule/: cond.rs  tests.rs
src/output/: mod.rs  term.rs
src/output/term/: tests.rs
src/rule/: tests.rs
src/term/: tests.rs
tests/: dict.rs
