[package]
name = "vbukv"
version = "0.1.13"
description = "Угадывалка слов по буквам"
authors = ["Mikhail Ivanov <m.ivanych@gmail.com>"]

edition = "2021"

[[bin]]
name = "vbukv-cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.26", features = ["derive"] }
fancy-regex = "0.14.0"
clap-markdown = "0.1.4"
